恢复初始化数据库代码;登录验证
